Added main projects

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,10 @@
-a {
+body {
+    background-color: #F9F7F7;
     color: #112D4E;
 }
 
-body,
-.navbar {
-    background-color: #F9F7F7;
-    color: #112D4E;
+h4 {
+    color: #3F72AF;
 }
 
 .jumbotron {
@@ -32,65 +31,49 @@ body,
     background-color: #F9F7F7;
 }
 
+.project-img {
+    width: 1200px;
+    padding: 0 0 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.project-description {
+    transition: opacity 1s;
+    padding: 20px 0;
+}
+
 .footer {
-    background-color: #112D4E;
+    background-color: #F9F7F7;
     color: #112D4E;
-    text-align: center;
-}
-
-.quote {
-    color: #F9F7F7;
-    text-shadow: 0 0 10px #112D4E;
-    position: absolute;
-    bottom: 30px;
-    width: 35%;
-    left: 60%;
-    text-align: left;
-}
-
-h3 {
-    color: #3F72AF;
 }
 
 #profile-img {
     width: 15%;
-    margin-left: -15%;
-    box-shadow: 0px 0px 5px 0px #000;
+    margin-left: -1%;
 }
 
-.typewriter {
-    overflow: hidden;
-    /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid #F3AA60;
-    /* The typwriter cursor */
-    white-space: nowrap;
-    /* Keeps the content on a single line */
-    margin: 0 auto;
-    /* Gives that scrolling effect as the typing happens */
-    animation:
-        typing 3.5s steps(50, end),
-        blink-caret .75s step-end infinite;
+#email-link {
+    color: #112D4E;
 }
 
-/* The typing effect */
-@keyframes typing {
-    from {
-        width: 0
-    }
-
-    to {
-        width: 100%
-    }
+#quote {
+    color: #F9F7F7;
+    text-shadow: 0 0 10px #112D4E;
+    position: absolute;
+    bottom: 30px;
+    width: 30%;
+    left: 60%;
+    text-align: left;
 }
 
-@keyframes blink-caret {
-
-    from,
-    to {
-        border-color: transparent
+@media all and (max-width: 800px) {
+    #quote {
+        font-size: large;
+        width: 40%;
+        left: 50%;
+        bottom: 60%;
     }
-
-    50% {
-        border-color: orange;
-    }
-}
+  }
+  
